# lfsr_crypto

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: basic_ci.yml  packages.yml
field/: CMakeLists.txt  field.cpp
field/include/: field.hpp
lfsr/: CMakeLists.txt  lfsr.cpp
lfsr/include/: lfsr.hpp
scripts/: init_template.sh
sources/: main.cpp
tests/: comb_gen_lin_comp_tests.cpp  cppfield_test.cpp  lfsr_test.cpp
